# ThoughtThread

./: .env.example  README.md  pyproject.toml
src/: __init__.py  audio_recorder.py  classifier.py  config.py  hotkey_listener.py  main.py  memory_store.py  query_router.py  response_service.py  transcription_service.py
tests/: test_text_mvp.py
